[apps/web] Fix spacing

--- a/apps/web/components/NavBar/Desktop/index.module.scss
+++ b/apps/web/components/NavBar/Desktop/index.module.scss
@@ -48,7 +48,7 @@
   min-height: calc(100vh - 54px);
   overflow-y: auto;
   width: 200px;
-  padding: 0.5rem 0 0.5rem 0.625rem;
+  padding: 0.5rem 0;
   scrollbar-gutter: stable;
 }
 
